# HotelOrderMng/src/main/java/com/hotel/batch/ordered_items_frequency/OrderedItemsFrequencyResponse.java
@@ -2,8 +2,13 @@ package com.hotel.batch.ordered_items_frequency;
 
 import lombok.Builder;
 
+import java.math.BigDecimal;
+
 @Builder
 public record OrderedItemsFrequencyResponse(
-        Integer frequency,
-        String itemName
+        String imageUrl,
+        String itemName,
+        BigDecimal price,
+        Integer frequency
+
 ) {}
