# hotelOrderFrontend/src/app/services/models/page-response-ordered-items-frequency-response.ts
@@ -1,16 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-import { OrderedItemsFrequencyResponse } from '../models/ordered-items-frequency-response';
-export interface PageResponseOrderedItemsFrequencyResponse {
-  content?: Array<OrderedItemsFrequencyResponse>;
-  empty?: boolean;
-  first?: boolean;
-  last?: boolean;
-  number?: number;
-  numberOfElements?: number;
-  size?: number;
-  totalElements?: number;
-  totalPages?: number;
-}
